--- a/index.html
+++ b/index.html
@@ -3,42 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TechGadgetZone</title>
+    <title>TechEvoHub</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1>Bienvenido a TechGadgetZone</h1>
-        <nav>
-            <ul>
-                <li><a href="#inicio">Inicio</a></li>
-                <li><a href="#reseñas">Reseñas</a></li>
-                <li><a href="#noticias">Noticias</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <h1>TechEvoHub</h1>
+            <nav>
+                <ul>
+                    <li><a href="#inicio">Inicio</a></li>
+                    <li><a href="#reseñas">Reseñas</a></li>
+                    <li><a href="#noticias">Noticias</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
-    <section id="inicio">
-        <h2>Últimos Gadgets</h2>
-        <p>Descubre los gadgets más recientes y sus características.</p>
-    </section>
-    <section id="reseñas">
-        <h2>Reseñas de Productos</h2>
-        <div class="review">
-            <h3>Gadget 1</h3>
-            <p>Descripción y reseña del Gadget 1.</p>
-        </div>
-        <div class="review">
-            <h3>Gadget 2</h3>
-            <p>Descripción y reseña del Gadget 2.</p>
-        </div>
-    </section>
-    <section id="noticias">
-        <h2>Últimas Noticias</h2>
-        <p>Mantente al día con las últimas noticias tecnológicas.</p>
-    </section>
+    <main>
+        <section id="inicio" class="hero">
+            <div class="container">
+                <h2>Explora la Innovación Tecnológica</h2>
+                <p>¡Bienvenido a TechEvoHub, tu destino definitivo para descubrir lo último en tecnología y gadgets! En este sitio web, ofrecemos análisis detallados, reseñas y noticias sobre los gadgets más recientes, desde smartphones y laptops hasta dispositivos innovadores y accesorios tecnológicos.</p>
+            </div>
+        </section>
+        <section id="reseñas" class="section">
+            <div class="container">
+                <h2>Reseñas de Productos</h2>
+                <div class="catalogo">
+                    <div class="producto">
+                        <img src="images/gadget1.jpg" alt="Gadget 1">
+                        <h3>Gadget 1</h3>
+                        <p>Descripción y reseña del Gadget 1.</p>
+                    </div>
+                    <div class="producto">
+                        <img src="images/gadget2.jpg" alt="Gadget 2">
+                        <h3>Gadget 2</h3>
+                        <p>Descripción y reseña del Gadget 2.</p>
+                    </div>
+                    <!-- Agrega más productos según sea necesario -->
+                </div>
+            </div>
+        </section>
+        <section id="noticias" class="section">
+            <div class="container">
+                <h2>Últimas Noticias</h2>
+                <p>Mantente al día con las últimas noticias tecnológicas.</p>
+            </div>
+        </section>
+    </main>
     <footer>
-        <p>&copy; 2024 TechGadgetZone</p>
+        <div class="container">
+            <p>&copy; 2024 TechEvoHub</p>
+        </div>
     </footer>
     <script src="script.js"></script>
 </body>
 </html>
+
