--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TechEvoHub</title>
+    <title>Technomdra</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>TechEvoHub</h1>
+            <h1>Technomdra</h1>
             <nav>
                 <ul>
                     <li><a href="#inicio">Inicio</a></li>
@@ -24,7 +24,7 @@
         <section id="inicio" class="hero">
             <div class="container">
                 <h2>Explora la Innovación Tecnológica</h2>
-                <p>¡Bienvenido a TechEvoHub, tu destino definitivo para descubrir lo último en tecnología y gadgets! En este sitio web, ofrecemos análisis detallados, reseñas y noticias sobre los gadgets más recientes, desde smartphones y laptops hasta dispositivos innovadores y accesorios tecnológicos.</p>
+                <p>¡Bienvenido a Technomdra, tu destino definitivo para descubrir lo último en tecnología y gadgets! En este sitio web, ofrecemos análisis detallados, reseñas y noticias sobre los gadgets más recientes, desde smartphones y laptops hasta dispositivos innovadores y accesorios tecnológicos.</p>
             </div>
         </section>
         <section id="reseñas" class="section">
